﻿=== Changelog ===
v7.0.2
  - fixed grey item equip on visiting mail
  - fixed skin selection in options
v7.0.1
  - bumped version to legion pre-patch
  - fixed performance issues introduced with 6.2.0 beta versions
  - fixed offline bank issues
  - reworked debug system to hopefully perform better when not used.
v6.0.3
  - reworked options panel
  - reworked some optios to be global for all containers:
    + rarity coloring
    + new item highlight
    + junk selling
  - fixed tooltips in offline bank
v6.0.2
  - propably found long time bug for overlayed bag icons
  - reworked interal (debug) logging system
  - reworked caching mechanism for more general use
  - added reagent bank
  - added blizzards bag sorting feature
  - added option to automatically sell junk when visiting a merchand
  - added option to hide flashing border for new items (per container)
  - fixed bag updating when visiting a vendor
  - extended maximum possible columns for bags to 40 to accomodate for bigger sizes, default for bank is increased to 14
v6.0.1
  - added file based logging on a per session basis, to enable type the following into the chat:
    /script BaudBag_DebugLog = true;
	The resulting log will be in the SavedVariable file for BaudBag. Beware that the option will reset to false when relogging or reloading the ui! Entries of previous sessions will automatically be overriden!
  - fixed locked bag selection
v6.0.0
  - adapted to braking changes in API & base container addon
v5.4.0
  - added workaround for slider value bug introduced in live 5.4.0 builds (see http://www.wowwiki.com/Patch_5.4.0/API_changes#Issues)
  - fixed blue borders in offline bank view when bank hasn't been visited in a session
v5.3.0
  - fixed search when caged battle pets are present in the bags open for search
  - added new option 
v5.2.0
  - fixed faulty behaviour when BB is deativated for the inventory (Ticket 77)
v5.1.0
  - hotfix for changes made to original BagSlots by Blizz
v5.0.0