@@ -3,6 +3,7 @@
 ## Interface: 70000
 ## LoadOnDemand: 0
 ## Dependencies: Blizzard_VoidStorageUI
+## OptionalDeps: CaedronWardrobe
 ## Notes: Allows you to combine bags as well as customize their display.
 ## Notes-zhCN: 以整合方式显示你的背包和银行|N本地化:Isler
 ## Notes-zhTW: 以整合方式顯示你的背包和銀行|N本地化:Isler
@@ -22,3 +23,4 @@ BaudBagToken.xml
 BaudBagBank.xml
 BaudBag.xml
 BaudBagVoidStorage.xml
+CaedronWardrobeSupport.lua
